# ETL-One-Billion-Row-Challenge

./: .gitignore  README.md  create_measurement.py  etl_dask.py  etl_duckdb.py  etl_pandas.py  etl_polars.py  etl_pyspark.py  etl_python.py  pyproject.toml  read_cities.py
dashboard/: dashboard.py
data/: measurements_summary.parquet
