[tool.poetry]
name = "one-billion-row-challenge"
version = "0.1.0"
description = ""
authors = ["Igor Ambrozini <igorwebd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
